The order of resolving distribution in tree composition is wrong. https://bugs.webkit.org/show_bug.cgi?id=99552

Reviewed by Dimitri Glazkov.

Source/WebCore:

According to the current ShadowDOM spec, we have to resolve <content> first, then resolve <shadow>.
However, the order of resolution is now the mixed tree order of <content> and <shadow>.

Test: fast/dom/shadow/content-reprojection-order.html

* html/shadow/ContentDistributor.cpp:
(WebCore::ContentDistributor::distribute): We should resolve <content> before <shadow>.
Only the first active shadow insertion point can select the rest of contents.
* html/shadow/HTMLContentElement.h:
(HTMLContentElement):
* html/shadow/HTMLShadowElement.cpp:
* html/shadow/HTMLShadowElement.h:
(WebCore::isHTMLShadowElement):
(WebCore):
(WebCore::toHTMLShadowElement):
* html/shadow/InsertionPoint.h:
(InsertionPoint): We don't need doesSelectFromHostChildren() anymore.

LayoutTests:

We also fix the existing wrong test.

* fast/dom/shadow/content-reprojection-order-expected.html: Added.
* fast/dom/shadow/content-reprojection-order.html: Added.
* fast/dom/shadow/shadow-element-rendering-single.html:


Canonical link: https://commits.webkit.org/118156@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@132237 268f45cc-cd09-0410-ab3c-d52691b4dbfc